--- a/Generator_Sandbox/config.json
+++ b/Generator_Sandbox/config.json
@@ -9,8 +9,8 @@
       "Baron",
       "Duke",
       "King",
-      "Hero",
-    ]
+      "Hero"
+    ],
     "Names": [
       "Romero",
       "Janus",
